# outbound-voice-ai-agent

./: .env.example  README.md  main.py  pyproject.toml
backend/: main.py  requirements.txt
backend/core/: prompts.py
backend/services/: deepgram_service.py  groq_service.py  llm_service.py  tts_service.py
backend/static/: index.html
