[project]
name = "voice-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepgram-sdk>=7.2.0",
    "elevenlabs>=2.49.0",
    "fastapi>=0.136.3",
    "groq>=1.2.0",
    "python-dotenv>=1.2.2",
    "twilio>=9.10.9",
    "uvicorn>=0.47.0",
    "websockets>=16.0",
]
